--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
   "homepage": "https://github.com/DiabGarren/passwordAPI#readme",
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/dotenv": "^8.2.0",
+    "@types/graphql": "^14.5.0",
+    "@types/mongoose": "^5.11.97",
+    "@types/typescript": "^2.0.0",
     "apollo-server": "^3.12.0",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
