--- a/package.json
+++ b/package.json
@@ -29,14 +29,14 @@
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
-    "mongoose": "^7.1.1",
-    "typescript": "^5.0.4"
+    "mongoose": "^7.1.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
     "concurrently": "^8.0.1",
     "eslint": "^8.40.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "typescript": "^5.0.4"
   }
 }
