--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "@types/mongoose": "^5.11.97",
     "@types/typescript": "^2.0.0",
     "apollo-server": "^3.12.0",
+    "apollo-server-express": "^3.12.0",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
     "graphql": "^16.6.0",
     "mongoose": "^7.1.1"
   },
